# home-assistant-mcp-heating-controller

./: README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  validate.yml
custom_components/heating_controller/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  frontend.py  manifest.json  number.py  select.py  sensor.py  services.yaml  store.py  strings.json
custom_components/heating_controller/controller/: __init__.py  state.py
custom_components/heating_controller/controller/mpc/: __init__.py  controller.py  learner.py  math_helper.py  results.py  sensors.py  types.py
custom_components/heating_controller/controller/mpc/models/: __init__.py  capacity.py  emitter.py  loss.py
custom_components/heating_controller/frontend/: card-styles.js  card.js  config.js  const.js  controls.js  editor-styles.js  editor.js  entities.js  format.js  heating-controller-card.js  translations.js
custom_components/heating_controller/translations/: de.json  en.json
docs/: card-design.md  mpc-guide.md
tests/: conftest.py  test_binary_sensor.py  test_card_js.py  test_config_flow.py  test_coordinator.py  test_frontend.py  test_init.py
tests/controller/: test_state.py
tests/controller/mpc/: test_controller.py  test_learner.py  test_sensors.py
tests/controller/mpc/models/: test_capacity.py  test_emitter.py  test_loss.py
