[project]
name = "heating-controller"
version = "0.1.0"
description = "Home Assistant custom integration for MPC-based room heating control"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-homeassistant-custom-component"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["custom_components"]
